--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "doc": "jsdoc -c jsdoc.json",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -8,5 +14,8 @@
     "mariadb": "^3.2.0",
     "node-geocoder": "^4.2.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.6.4"
   }
 }
