--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "doc": "jsdoc -c jsdoc.json",
+    "docs": "jsdoc src -r -d docs",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest"
@@ -16,6 +16,12 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.6.4"
+    "eslint": "^8.49.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.4",
+    "jsdoc": "^4.0.2",
+    "prettier": "^3.0.3"
   }
 }
