--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.2.0",
     "node-geocoder": "^4.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "nodemailer": "^6.6.3",
+    "ejs": "^3.1.6"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
